рефакторинг, работа с api, переключение категорий

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="msapplication-TileColor" content="#FFAB08">
   <meta name="theme-color" content="#FFAB08">
   <link rel="stylesheet" href="css/index.css">
-	<script src="js/index.js" defer></script>
+	<script src="js/index.js" type="module"></script>
   <title>YourMeal - Самые сочные бургеры</title>
 
 </head>
