--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 
         <form class="modal-delivery__form" id="delivery">
           <fieldset class="modal-delivery__fieldset-input">
-            <input class="modal-delivery__input" type="text" name="name" placeholder="Ваше имя">
-            <input class="modal-delivery__input" type="tel" name="phone" placeholder="Телефон">
+            <input class="modal-delivery__input" type="text" name="name" placeholder="Ваше имя" required>
+            <input class="modal-delivery__input" type="tel" name="phone" placeholder="Телефон" required>
           </fieldset>
 
           <fieldset class="modal-delivery__fieldset-radio">
